blog.mergify.io/style.css
@import url('https://cdnjs.cloudflare.com/ajax/libs/prism/1.20.0/themes/prism.min.css');
@import url('https://cdn.jsdelivr.net/npm/prism-themes@1.1.0/themes/prism-ghcolors.css');
@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Lora&display=swap');

body {
    font-family: 'Poppins', sans-serif;
}

.post-full-content h1, .post-full-content h2, .post-full-content h3, .post-full-content h4, .post-full-content h5, .post-full-content h6
{
    font-family: 'Poppins', sans-serif;
}

.post-full-content {
    font-family: 'Lora', serif;
}

.site-nav-left {
    text-transform: none;
    font-size: 120%;
}

.site-nav-logo img {
    margin-top: -7px;
    height: 32px;
}

.nav-post-title {
    top: 11px;
}

.post-card-image {
    background: none;
}

.post-full-image {
    background: none;
}

#mc_embed_signup {
    margin-top: 2em;
    background: var(--ghost-accent-color);
    padding-top: 3em;
    padding-bottom: 3em;
}

#mc_embed_signup label {
    font-size: 2.5em;
    margin-bottom: 1em;
}

.flex {
    display: flex;
    justify-content: center;
    align-items: center;
}

#cta {
    background: var(--ghost-accent-color);
    padding-top: 3em;
    padding-bottom: 3em;
    margin-left: auto;
    margin-right: auto;
    margin-top: 3em;
    color: white;
}

#cta a.button {
    padding: 12px 24px;
    border: 1px transparent;
    border-radius: 4px;
    text-align: center;
    text-decoration: none;
    margin: 30px;
}


#cta a.button.primary {
    color: #ddd;
    background-color: #067ABD;
}

#cta a.button.primary:hover {
    background-color: #53A9DB;
}

#cta #title {
    font-size: 2.5em;
    margin-bottom: 1em;
    text-align: center;
    line-height: 1.2em;
}

#cta #subtitle {
    font-size: 1.2em;
    margin-bottom: 1em;
    text-align: center;
    color: #eee;
    margin: 50px;
}

/* twemoji */
img.emoji {
    width: 1.3em;
    display: initial;
    margin: initial;
    height: initial;
    max-width: initial;
}

